# Pipy

./: AGENTS.md  README.md  pyproject.toml
docs/: README.md  agent-loop.md  architecture.md  auth.md  development.md  goal.md  porting-plan.md  providers.md  rpc.md  sdk.md  serialization.md  sessions.md  tools.md
pi_agent/: __init__.py  agent.py  events.py  loop.py  types.py
pi_ai/: __init__.py  context.py  models.py  stream.py  streaming.py  transform.py  types.py  validation.py
pi_ai/auth/: __init__.py  anthropic.py  env.py  oauth.py  openai.py  pkce.py  storage.py  types.py
pi_ai/providers/: __init__.py  anthropic.py  base.py  openai.py  simple_options.py
pi_ai/utils/: __init__.py  sanitize_unicode.py  serialization.py
pi_sdk/: __init__.py  __main__.py  rpc.py  sdk.py
pi_session/: __init__.py  manager.py  tree.py
pi_tools/: __init__.py  base.py  bash.py  edit.py  edit_diff.py  path_utils.py  read.py  shell.py  truncate.py  write.py
tests/: conftest.py  helpers.py
tests/agent/: test_agent.py  test_agent_loop.py
tests/ai/: test_anthropic.py  test_cache_retention.py  test_context.py  test_integration_abort.py  test_integration_anthropic.py  test_integration_openai.py  test_integration_tokens.py  test_openai.py  test_openai_tool_choice.py  test_sanitize.py  test_simple_options.py  test_stream.py  test_streaming_json.py  test_transform.py
tests/sdk/: test_rpc.py  test_sdk.py
tests/session/: helpers.py  test_build_context.py  test_custom_entries.py  test_file_operations.py  test_labels.py  test_manager.py  test_migration.py  test_session_info.py  (+1 more)
(+3 files in other folders)
