[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-python"
version = "0.1.0"
description = "Pi agent engine in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "authlib>=1.3.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
]

[project.scripts]
pi-rpc = "pi_sdk.rpc:main"

[tool.setuptools]
packages = ["pi_ai", "pi_agent", "pi_tools", "pi_session", "pi_sdk"]
