[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-python"
version = "0.1.0"
description = "Pi agent engine in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "authlib>=1.3.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
pi-rpc = "pi_sdk.rpc:main"

[tool.setuptools]
packages = [
  "pi_ai",
  "pi_ai.auth",
  "pi_ai.providers",
  "pi_ai.utils",
  "pi_agent",
  "pi_tools",
  "pi_session",
  "pi_sdk",
]

[tool.ruff]
target-version = "py312"
